Needs some padding from left

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -150,6 +150,7 @@ timeline {
           font-size: 70px;
           bottom: auto;
           top: @basepadding * 4;
+          left: @basepadding * 4;
           z-index: 15;
         }
       }
