--- a/css/uzem.less
+++ b/css/uzem.less
@@ -170,6 +170,48 @@ timeline {
 
           .monthloop(12);
 
+          date {
+            background: @basecolor;
+            display: block;
+            color: white;
+            box-sizing: border-box;
+            font-size: 1.5vh;
+            padding-left: @basepadding * 4;
+            padding-right: @basepadding * 4;
+            padding-top: @basepadding / 2;
+            padding-bottom: @basepadding / 2;
+          }
+
+          &.prezi {
+            date {
+              background: @prezicolor;
+            }
+          }
+
+          &.personal {
+            date {
+              background: @personalcolor;
+            }
+          }
+
+          &.coandco {
+            date {
+              background: @coandcocolor;
+            }
+          }
+
+          &.studies {
+            date {
+              background: @studiescolor;
+            }
+          }
+
+          &.teaching {
+            date {
+              background: @teachingcolor;
+            }
+          }
+
       }
     }
 
