--- a/css/uzem.less
+++ b/css/uzem.less
@@ -211,7 +211,25 @@ timeline {
               background: @teachingcolor;
             }
           }
-          
+
+          /* WHERE TO PUT THEM */
+
+          &.odd-0 {
+            date {
+              text-align: right;
+              top: 50vh;
+            }
+          }
+
+          &.odd-1 {
+            display: table;
+            left: 50.5vw;
+
+            date {
+              text-align: right;
+            }
+          }
+
         }
       }
     }
