Adding next year

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -14,8 +14,8 @@
 @basepadding: 5px;
 
 @breakpoint1: 500px;
-@numberofyears: 35;
-@numberoffullyears: 15;
+@numberofyears: 36;
+@numberoffullyears: 16;
 
 .basefont {
   font-family: 'Pathway Gothic One', sans-serif;
@@ -226,7 +226,7 @@ timeline {
             left: 50.5vw;
 
             date {
-              text-align: right;
+              text-align: left;
             }
           }
 
