Adding some font styles

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -212,6 +212,22 @@ timeline {
             }
           }
 
+          /* REFERENCE STYLES */
+
+          h3 {
+            .displayfont;
+            margin-top: 0.7em;
+            margin-bottom: 0.7em;
+            font-size: 3vh;
+            padding-left: @basepadding * 4;
+          }
+
+          p {
+            font-size: 2vh;
+            padding-left: @basepadding * 4;
+            padding-right: @basepadding * 2;
+          }
+
           /* WHERE TO PUT THEM */
 
           &.odd-0 {
