Exact font sizes

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -236,12 +236,12 @@ timeline {
             .displayfont;
             margin-top: 0.7em;
             margin-bottom: 0.7em;
-            font-size: 3vh;
+            font-size: 24px;
             padding-left: @basepadding * 4;
           }
 
           p {
-            font-size: 2vh;
+            font-size: 12px;
             padding-left: @basepadding * 4;
             padding-right: @basepadding * 2;
           }
