--- a/css/uzem.less
+++ b/css/uzem.less
@@ -95,9 +95,9 @@ timeline {
     .line {
       display: block;
       position: absolute;
-      width: 1vw;
+      width: 0.5vw;
       height: (100vh * @numberoffullyears) + (50vh * (@numberofyears - @numberoffullyears + 1));
-      left: 49.5vw;
+      left: 9.5vw;
       top: 0;
       background: @basecolor;
       background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 3%, rgba(0,0,0,1) 99%, rgba(0,0,0,0) 100%);
@@ -158,25 +158,17 @@ timeline {
           display: block;
           position: absolute;
           box-sizing: border-box;
-          width: 44.5vw;
-          margin-left: 5vw;
+          width: 40vw;
+          left: 10vw;
 
           /* WHERE TO PUT THEM */
 
           &.odd-0 {
-            date {
-              text-align: right;
-            }
           }
 
           &.odd-1 {
-            display: table;
-            left: 50.5vw;
-            margin-left: 0;
-
-            date {
-              text-align: left;
-            }
+            width: 40vw;
+            padding-left: 40vw;
           }
 
           .monthloop(@counter) when (@counter > 0) {
