Fixing year markers

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -145,10 +145,10 @@ timeline {
           .displayfont;
           display: block;
           position: absolute;
-          font-size: 36px;
+          font-size: 4vw;
           bottom: auto;
-          top: @basepadding * 4;
-          left: @basepadding * 4;
+          top: 1.8vw;
+          left: 1.8vw;
           z-index: 15;
         }
 
