Adding a Lightbox - style later

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -243,3 +243,14 @@ timeline {
     }
 
 }
+
+/* LIGHTBOX */
+
+#lightbox {
+  display: none
+
+  p:target, p:target~#chrome {
+    display: block;
+  }
+  
+}
