--- a/css/uzem.less
+++ b/css/uzem.less
@@ -247,10 +247,10 @@ timeline {
 /* LIGHTBOX */
 
 #lightbox {
-  display: none
+  display: none;
 
   p:target, p:target~#chrome {
     display: block;
   }
-  
+
 }
