Adding some style

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -248,8 +248,12 @@ timeline {
 
 lightbox {
   display: none;
-  background: red;
   position: fixed;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  box-sizing: border-box;
+  padding: @basepadding*4;
 
   &:target {
     display: block;
