Maybe we need this & here

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -141,7 +141,7 @@ timeline {
 
         .yearloop(@numberofyears);
 
-        .2018 {
+        &.2018 {
           height: 50vh;
           top: 0;
         }
