--- a/css/uzem.less
+++ b/css/uzem.less
@@ -161,6 +161,7 @@ timeline {
           width: 40vw;
           left: 12vw;
           border: 1px solid;
+          background: white;
 
           /* WHERE TO PUT THEM */
 
