--- a/css/uzem.less
+++ b/css/uzem.less
@@ -163,6 +163,7 @@ timeline {
           left: 12vw;
           border: 1px solid;
           background: white;
+          transform: translateZ(1px);
 
           /* WHERE TO PUT THEM */
 
