--- a/css/uzem.less
+++ b/css/uzem.less
@@ -40,6 +40,7 @@ body {
   font-size: @basepadding * 3;
   padding: 0;
   margin: 0;
+	transform-style: preserve-3d;
 }
 
 a {
@@ -163,7 +164,8 @@ timeline {
           left: 12vw;
           border: 1px solid;
           background: white;
-          transform: translateZ(1px);
+          transform: translateZ(-1px) scale(2);
+          transform-style: preserve-3d;
 
           /* WHERE TO PUT THEM */
 
