--- a/css/uzem.less
+++ b/css/uzem.less
@@ -40,7 +40,6 @@ body {
   font-size: @basepadding * 3;
   padding: 0;
   margin: 0;
-	transform-style: preserve-3d;
 }
 
 a {
@@ -127,7 +126,7 @@ timeline {
           &:nth-child(@{counter}) {
             top: 100vh * (@counter - 1) - 50vh;
             left: 0;
-            z-index: 100-@counter;
+            z-index: 100-counter;
             & when (@counter > @numberoffullyears + 1) {
               top: 100vh * @numberoffullyears + 50vw * (@counter - @numberoffullyears) - 50vh;
               height: 50vh;
@@ -164,8 +163,6 @@ timeline {
           left: 12vw;
           border: 1px solid;
           background: white;
-          transform: translateZ(-1px) scale(2);
-          transform-style: preserve-3d;
 
           /* WHERE TO PUT THEM */
 
