Little bit shorter line

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -96,7 +96,7 @@ timeline {
       display: block;
       position: absolute;
       width: 0.5vw;
-      height: (100vh * @numberoffullyears) + (50vh * (@numberofyears - @numberoffullyears + 1));
+      height: (100vh * @numberoffullyears) + (50vh * (@numberofyears - @numberoffullyears + 1) - 25vh);
       left: 9.5vw;
       top: 0;
       background: @basecolor;
