--- a/css/uzem.less
+++ b/css/uzem.less
@@ -232,6 +232,12 @@ timeline {
 
           /* REFERENCE STYLES */
 
+          img {
+            width: 100px;
+            height: auto;
+            float: left;
+          }
+
           h3 {
             .displayfont;
             margin-top: 0.7em;
