Sizes and margins

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -233,9 +233,10 @@ timeline {
           /* REFERENCE STYLES */
 
           img {
-            width: 100px;
+            width: @basepadding * 12;
             height: auto;
             float: left;
+            margin-right: @basepadding * 4;
           }
 
           h3 {
