Proper image position

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -235,8 +235,10 @@ timeline {
           img {
             width: @basepadding * 18;
             height: auto;
-            float: left;
+            float: right;
             margin-right: @basepadding * 4;
+            margin-top: @basepadding * 4;
+            margin-left: @basepadding * 2;
           }
 
           h3 {
