--- a/css/uzem.less
+++ b/css/uzem.less
@@ -272,6 +272,7 @@ lightbox {
   box-sizing: border-box;
   padding: @basepadding*4;
 	z-index: 999;
+  background: white;
 
   &:target {
     display: block;
