--- a/css/uzem.less
+++ b/css/uzem.less
@@ -239,6 +239,7 @@ timeline {
             margin-right: @basepadding * 4;
             margin-top: @basepadding * 4;
             margin-left: @basepadding * 2;
+            margin-bottom: @basepadding * 4;
           }
 
           h3 {
