Some text styles

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -278,4 +278,20 @@ lightbox {
   &:target {
     display: block;
   }
+
+  h2 {
+    .displayfont;
+    font-size: 36px;
+    margin-bottom: 0px;
+    display: block;
+    font-size: 50px;
+  }
+
+  p {
+    font-size: @basepadding * 3;
+    .basefont;
+    font-size: 18px;
+    display: block;
+  }
+
 }
