--- a/css/uzem.less
+++ b/css/uzem.less
@@ -68,13 +68,15 @@ header, footer {
   }
 
   h2, h3 {
-    font-size: @basepadding * 3;
     .basefont;
     font-size: 18px;
     display: block;
   }
 
-  h3 {
+  p {
+    .basefont;
+    font-size: 18px;
+    display: block;
   }
 
 }
