--- a/css/uzem.less
+++ b/css/uzem.less
@@ -74,9 +74,9 @@ header, footer {
   }
 
   p {
-    padding-top: @basepadding * 10;
+    padding-top: 25vh;
     .basefont;
-    font-size: 24px;
+    font-size: 32px;
     display: block;
   }
 
