--- a/css/uzem.less
+++ b/css/uzem.less
@@ -74,7 +74,9 @@ header, footer {
   }
 
   p {
-    padding-top: 20vh;
+    top: 45vh;
+    position: absolute;
+    width: 100%;
     .basefont;
     font-size: 32px;
     display: block;
