--- a/css/uzem.less
+++ b/css/uzem.less
@@ -80,6 +80,11 @@ header, footer {
     .basefont;
     font-size: 32px;
     display: block;
+
+    @media only screen and (max-device-width : 500px) {
+      font-size: 24px;
+    }
+
   }
 
 }
@@ -245,6 +250,10 @@ timeline {
             margin-top: @basepadding * 4;
             margin-left: @basepadding * 2;
             margin-bottom: @basepadding * 4;
+
+            @media only screen and (max-device-width : 500px) {
+              display: none;
+            }
           }
 
           h3 {
