More mobile css

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -80,9 +80,11 @@ header, footer {
     .basefont;
     font-size: 32px;
     display: block;
+    box-sizing: border-box;
 
     @media only screen and (max-device-width : 500px) {
       font-size: 24px;
+      padding: 20vw;
     }
 
   }
@@ -268,6 +270,11 @@ timeline {
             font-size: 15px;
             padding-left: @basepadding * 4;
             padding-right: @basepadding * 2;
+
+            @media only screen and (max-device-width : 500px) {
+              font-size: 12px;
+            }
+
           }
 
         }
