--- a/css/uzem.less
+++ b/css/uzem.less
@@ -85,6 +85,7 @@ header, footer {
     @media only screen and (max-device-width : 500px) {
       font-size: 24px;
       padding: 20vw;
+      top: 30vh;
     }
 
   }
