--- a/css/uzem.less
+++ b/css/uzem.less
@@ -265,6 +265,10 @@ timeline {
             margin-bottom: 0.7em;
             font-size: 24px;
             padding-left: @basepadding * 4;
+
+            @media only screen and (max-device-width : 500px) {
+              font-size: 18px;
+            }
           }
 
           p {
