--- a/css/uzem.less
+++ b/css/uzem.less
@@ -206,6 +206,10 @@ timeline {
             padding-right: @basepadding * 4;
             padding-top: @basepadding / 2;
             padding-bottom: @basepadding / 2;
+
+            @media only screen and (max-device-width : 500px) {
+              padding-left: @basepadding * 3;
+            }
           }
 
           &.prezi {
@@ -268,6 +272,7 @@ timeline {
 
             @media only screen and (max-device-width : 500px) {
               font-size: 18px;
+              padding-left: @basepadding * 3;
             }
           }
 
@@ -278,6 +283,7 @@ timeline {
 
             @media only screen and (max-device-width : 500px) {
               font-size: 12px;
+              padding-left: @basepadding * 3;
             }
 
           }
