Some padding there too

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -71,6 +71,10 @@ header, footer {
     .basefont;
     font-size: 18px;
     display: block;
+
+    @media only screen and (max-device-width : 500px) {
+      padding: 10vw;
+    }
   }
 
   p {
