--- a/css/uzem.less
+++ b/css/uzem.less
@@ -273,6 +273,7 @@ timeline {
             margin-bottom: 0.7em;
             font-size: 24px;
             padding-left: @basepadding * 4;
+            padding-right: @basepadding * 2;
 
             @media only screen and (max-device-width : 500px) {
               font-size: 18px;
