--- a/css/uzem.less
+++ b/css/uzem.less
@@ -73,7 +73,8 @@ header, footer {
     display: block;
 
     @media only screen and (max-device-width : 500px) {
-      padding: 10vw;
+      padding-left: 10vw;
+      padding-right: 10vw;
     }
   }
 
