--- a/css/uzem.less
+++ b/css/uzem.less
@@ -278,6 +278,12 @@ timeline {
             }
           }
 
+          &.importance-2 {
+            h3 {
+              font-size: 32px;
+            }
+          }
+
           p {
             font-size: 15px;
             padding-left: @basepadding * 4;
