--- a/css/uzem.less
+++ b/css/uzem.less
@@ -212,6 +212,7 @@ timeline {
             padding-right: @basepadding * 4;
             padding-top: @basepadding / 2;
             padding-bottom: @basepadding / 2;
+            border-radius: 3px 0 3px 0;
 
             @media only screen and (max-device-width : 500px) {
               padding-left: @basepadding * 3;
