Not importance-duh

--- a/css/uzem.less
+++ b/css/uzem.less
@@ -279,7 +279,7 @@ timeline {
             }
           }
 
-          &.importance-2 {
+          &.important-2 {
             h3 {
               font-size: 32px;
             }
