--- a/css/uzem.less
+++ b/css/uzem.less
@@ -210,8 +210,8 @@ timeline {
             font-size: 12px;
             padding-left: @basepadding * 4;
             padding-right: @basepadding * 4;
-            padding-top: @basepadding / 4;
-            padding-bottom: @basepadding / 4;
+            padding-top: @basepadding;
+            padding-bottom: @basepadding;
             border-radius: 3px 3px 0 0;
 
             @media only screen and (max-device-width : 500px) {
