--- a/css/uzem.less
+++ b/css/uzem.less
@@ -279,12 +279,6 @@ timeline {
             }
           }
 
-          &.important-2 {
-            h3 {
-              font-size: 32px;
-            }
-          }
-
           p {
             font-size: 15px;
             padding-left: @basepadding * 4;
@@ -295,6 +289,25 @@ timeline {
               padding-left: @basepadding * 3;
             }
 
+          }
+
+          &.important-2 {
+            width: 82vw;
+            margin-left: 12vw;
+
+            h3 {
+              font-size: 32px;
+              @media only screen and (max-device-width : 500px) {
+                font-size: 24px;
+              }
+            }
+
+            p {
+              font-size: 24px;
+              @media only screen and (max-device-width : 500px) {
+                font-size: 18px;
+              }
+            }
           }
 
         }
