--- a/css/uzem.less
+++ b/css/uzem.less
@@ -308,6 +308,14 @@ timeline {
                 font-size: 18px;
               }
             }
+
+            img {
+              width: @basepadding * 50;
+
+              @media only screen and (max-device-width : 500px) {
+                display: auto;
+              }
+            }
           }
 
         }
